[tool.poetry]
name = "cryptotape"
version = "0.1.0"
description = ""
authors = ["bullbearpanda <bullbearpanda.public@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
websockets = "^12.0"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
